# bankStatement_pdf_to_excel

./: README.md  debug_parser.py  main.py  pyproject.toml  requirements.txt
debug_output/: debug_output.txt  debug_output_sample1.txt  debug_output_sample2.txt  debug_output_sample3.txt
exporter/: excel_exporter.py
extractor/: layout_detector.py  metadata_extractor.py  models.py  pdf_reader.py  transaction_parser.py
output/: sample1_20260612_002148.xlsx  sample1_20260612_115924.xlsx  sample2_20260611_115519.xlsx  sample2_20260611_195937.xlsx  sample2_20260612_002347.xlsx  sample2_20260612_120109.xlsx  sample3_20260611_201919.xlsx  sample3_20260612_002247.xlsx  sample3_20260612_120137.xlsx  sample3_20260612_121320.xlsx  sample3_20260612_122136.xlsx  sample3_20260612_122356.xlsx
validator/: validator.py
